--- a/frontend/ios/frontend/Info.plist
+++ b/frontend/ios/frontend/Info.plist
@@ -40,7 +40,7 @@
       <dict>
         <key>CFBundleURLSchemes</key>
         <array>
-          <string>com.googleusercontent.apps._some_id_here_</string>
+          <string>com.googleusercontent.apps.193142907313-j1cv80f6k7fgcki282r1d7qb3v5jkefr</string>
         </array>
       </dict>
     </array>
