--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "react-native-screens": "~4.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "typescript": "~5.8.3",
+    "@types/react": "~19.0.10"
   },
   "private": true
 }
